<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.ServicesDemoActivity">

  <Button
      android:id="@+id/btnSimpleServiceNonSticky"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:onClick="buttonClicked"
      android:text="@string/btn_simple_service_non_sticky"/>

  <Button
      android:id="@+id/btnSimpleServiceSticky"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:onClick="buttonClicked"
      android:text="@string/btn_simple_service_sticky"/>

  <Button
      android:id="@+id/btnSimpleServiceIntentRedelivery"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:onClick="buttonClicked"
      android:text="@string/btn_simple_service_intent_redelivery"/>

  <Button
      android:id="@+id/btnIntentServiceNonSticky"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:onClick="buttonClicked"
      android:text="@string/btn_intent_service_non_sticky"/>

  <Button
      android:id="@+id/btnIntentServiceIntentRedelivery"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:onClick="buttonClicked"
      android:text="@string/btn_intent_service_intent_redelivery"/>
</LinearLayout>
